--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "devDependencies": {
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/proxy": "^1.3.3"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3000"
+    }
   }
 }
