--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxt-sbb",
+  "name": "syb-life",
   "version": "1.0.0",
-  "description": "My wicked Nuxt.js project",
+  "description": "syb-life",
   "author": "shenyibo",
   "private": true,
   "scripts": {
