--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "@nuxtjs/axios": "^5.10.3",
-    "@nuxtjs/proxy": "^1.3.3"
+    "@nuxtjs/proxy": "^1.3.3",
+    "less": "^3.11.2",
+    "less-loader": "^6.1.0"
   },
   "config": {
     "nuxt": {
