--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
 branches:
   only:
   - master
+install:
+  - npm install
+  - npm run build
 script:
 - echo "build"
 before_install:
@@ -14,4 +17,6 @@ addons:
   - 139.196.51.218
 after_success:
 - chmod 600 ~/.ssh/id_rsa
-- ssh root@139.196.51.218 -o StrictHostKeyChecking=no 'cd /usr/local/syb/syb-life/ && pm2 delete syb-life && git pull && npm run build && npm install && pm2 start npm --name "syb-life" -- run start'
+- rsync -az --delete ./dist/* root@139.196.51.218:/usr/local/syb/nuxt
+- rsync -az --delete .nuxt nuxt.config.js package.json root@139.196.51.208:/usr/local/syb/nuxt
+- ssh root@139.196.51.218 -o StrictHostKeyChecking=no 'cd /usr/local/syb/syb-life/ && npm install && pm2 start npm --name "syb-life" -- run start'
