--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "element-ui": "^2.4.11",
+    "mavon-editor": "^2.9.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
